--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,10 +22,10 @@ jobs:
         uses: actions/checkout@v4
 
       #Step -2  Setup Python Environment
-      - name: set up python environment verison 3.10
-        uses: actions/setup-python@v3
+      - name: set up python environment verison
+        uses: actions/setup-python@v2
         with:
-          python-version: "3.8"
+          python-version: '3.8'
 
       # Step-3 Install Dependencies
       - name: Install dependencies
